--- a/Environment/infinity-api/infinity-api.yaml
+++ b/Environment/infinity-api/infinity-api.yaml
@@ -27,22 +27,24 @@ spec:
               value: "production"
             - name: "APP_NAME"
               value: "MTN Soccer Fantasy League"
+            - name: "PUBLIC_PORT"
+              value: "8000"
             - name: "DCB_HOST"
-              value: "http:10.0.77.56"
+              value: "http://10.107.244.112:5000"
             - name: "GAME_ENTRIES_HOST"
-              value: "10.244.0.135:5015"
+              value: "https://10.0.34.98:5000"
             - name: "USER_DATA_HOST"
-              value: "10.244.0.99:5006"
+              value: "10.0.224.51:5000"
             - name: "VOUCHER_VAULT_HOST"
-              value: "http:10.0.77.56"
+              value: "http://10.103.97.116:5000"
             - name: "AUTOLOGIN_HOST"
-              value: "http:10.0.77.56"
+              value: "http://10.100.59.96:5000"
             - name: "SMS_HOST"
-              value: "http:10.0.77.56"
+              value: "0.0.0.0:5000"
             - name: "CORS_DOMAIN"
               value: "http://localhost:8080"
             - name: "FANCLASH_HOST"
-              value: "http://10.0.77.56"
+              value: "https://penrosedigital.co.za"
             - name: "PGHOST"
               value: "database-fanclash-staging-za.postgres.database.azure.com"
             - name: "PGDATABASE"
