--- a/Environment/user-data/user-data.yaml
+++ b/Environment/user-data/user-data.yaml
@@ -27,6 +27,8 @@ spec:
               value: "production"
             - name: "APP_ENV"
               value: "production"
+            - name: "PORT"
+              value: "5006"
             - name: "OBSCURE_SYMBOL"
               value: "'#'"
             - name: "SENTRY_DNS"
