--- a/Environment/infinity-api/infinity-api.yaml
+++ b/Environment/infinity-api/infinity-api.yaml
@@ -65,3 +65,5 @@ spec:
               value: "infinity_api"
             - name: "MODULES"
               value: "login,dcb,gameEntries,userData,autoLogin"
+            - name: "USER_DATA_DECRYPTION_HOST"
+              value: "10.0.114.241"
